Utilizando diretivas ,ngClass ,ngClass , ngModel e ngStyle

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-interpolacao></app-interpolacao>
-<app-control-flow></app-control-flow>
+<!-- <app-interpolacao></app-interpolacao>
+<app-control-flow></app-control-flow> -->
+
+<app-diretiva></app-diretiva>
+<app-propertie-binding></app-propertie-binding>
 <router-outlet />
